tests/invalid/set_add_missing_elem_eq/main.py
def run_case() -> None:
    s: set[set[int]] = set()
    x: set[int] = set()
    s.add(x)


if __name__ == "__main__":
    run_case()
